2006-09-05  David Hansen  <david.hansen@gmx.net>

	* w3m.el (w3m-local-find-file-regexps): Default to
	'(nil . "\\.[sx]?html?\\'").

2006-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-group-table): Update editoria,
	column, and seiron groups.
	(shimbun-sankei-get-headers-editoria): Rewrite.
	(shimbun-sankei-get-headers-column): Rewrite.
	(shimbun-sankei-get-headers-seiron): Rewrite.
	(shimbun-clear-contents): Rearrange subject header in editoria
	articles; remove headlines and blockquotes from seiron articles.

2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fetch old
	articles thoroughly.

	* w3m.el (w3m-enable-google-feeling-lucky): New variable.
	(w3m-input-url): Disable the Google feeling lucky feature if it is nil.

2006-08-28  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-onion.el: New module.

2006-08-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el (shimbun-ohmynews-jp-content-start)
	(shimbun-ohmynews-jp-content-end): Relax.

2006-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-show-decoded-url): Add entry for ohmynews.co.jp.

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fetch old
	articles; show Japanese group name in From.
	(shimbun-make-contents): Break long Japanese lines.

2006-08-30  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-relationship-search-patterns): Call
	`w3m-decode-anchor-string' in order to decode "&amp;" in anchor
	strings.
	(w3m-relationship-freshmeat-estimate): Removed.
	(w3m-relationship-estimate-rules): Use
	`w3m-relationship-simple-estimate' instead of the above, to
	simplify related codes.

2006-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el: New module.

2006-08-24  David Hansen  <david.hansen@pysik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-make-contents): Fixed junk
	filtering regexp.
