@@ -1,3 +1,9 @@
+2006-09-06  David Hansen  <david.hansen@physik.fu-berlin.de>
+
+	* sb-spiegel.el (shimbun-spiegel-content-start): Follow page layout
+	changes.
+	(shimbun-spiegel-content-end): ditto.
+
 2006-09-05  David Hansen  <david.hansen@gmx.net>
 
 	* w3m.el (w3m-local-find-file-regexps): Default to
